adjusted pom.xml